...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirectionActivity">


    <TextView
        android:id="@+id/goal_exhibit_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/light_pink"
        android:gravity="center"
        android:scrollbarSize="5dp"
        android:scrollbars="vertical"
        android:text="TextView"
        android:textColor="#D32F2F"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/brief_path"
        app:layout_constraintEnd_toStartOf="@+id/path_total_distance"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_exhibit_name"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/brief_path"
        android:layout_width="0dp"
        android:layout_height="330dp"
        app:layout_constraintBottom_toTopOf="@+id/previous_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_exhibit_name" />

    <androidx.recyclerview.widget.RecyclerView
...
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:onClick="onNextButtonClick"
        android:text="NEXT"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toEndOf="@+id/previous_button"
        app:layout_constraintTop_toBottomOf="@+id/next_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/previous_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:onClick="onBackButtonClick"
        android:text="PREVIOUS"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previous_text"
        app:layout_constraintVertical_bias="0.0" />
...
