<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <TextView
        android:id="@+id/exhibit_name"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@color/pink"
        android:text="Exhibit name"
        android:textColor="#8D6E63"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/exhibit_distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/exhibit_address"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:text="Exhibit address"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exhibit_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/exhibit_distance"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@color/pink"
        android:text="Exhibit distance"
        android:textColor="#8D6E63"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/exhibit_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/exhibit_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>